# ChangeLog for x11-misc/bbapm
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/bbapm/Attic/ChangeLog,v 1.8 2003/03/02 23:13:32 mholzer Exp $

*bbapm-0.0.1-r3 (12 Dec 2002)

  02 Mar 2003; Martin Holzer <mholzer@gentoo.org> bbapm-0.0.1-r3.ebuild :
  Filtering out -fomi-frame-pointer. Closes #16623.

  06 Jan 2003; Jack Morgan <jmorgan@gentoo.org> bbapm-0.0.1-r*.ebuild :
  Removed sparc keyword

  12 Dec 2002; Matt Keadle <mkeadle@gentoo.org> bbapm-0.0.1-r3.ebuild
  files/digest-bbapm-0.0.1-r3 files/bbapm-0.0.1-gcc3.patch

  Patch created to successfuly build on gcc3.x systems.

*bbapm-0.0.1-r2 (15 Mar 2002)

  15 Mar 2002; Seemant Kulleen <seemant@gentoo.org> bbapm-0.0.1-r2 :

  Changed the DEPENDS to virtual/blackbox, because this app will work with 
  blackbox and fluxbox.

*bbapm-0.0.1-r1 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.