@@ -1,6 +1,6 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/bbapm/Attic/bbapm-0.0.1-r3.ebuild,v 1.4 2003/03/02 23:13:32 mholzer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/bbapm/Attic/bbapm-0.0.1-r3.ebuild,v 1.5 2003/06/19 13:21:09 mkeadle Exp $
 
 inherit eutils flag-o-matic
 
@@ -20,6 +20,7 @@ DEPEND="virtual/blackbox
 src_unpack() {
 
 	unpack ${A}; cd ${S}
+	sed -i -e 's:friend:friend class:' LinkedList.hh
 	epatch ${FILESDIR}/${P}-gcc3.patch
 
 }
